test cases for controller